fixed: text overflow

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -42,6 +42,7 @@ h2 {
   font-family: 'Ubuntu Mono', monospace !important;
   height: 300px;
   width: 500px;
+  overflow-y: auto;
   max-width: 500px;
   padding: 10px;
   font-family: monospace;
@@ -58,6 +59,7 @@ h2 {
   font-family: 'Ubuntu Mono', monospace !important;
   height: 300px;
   width: 500px;
+  overflow-y: auto;
   max-width: 500px;
   padding: 10px;
   font-family: monospace;
